# my-YT-clipper

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  DOCKERFILE  Procfile  README.md  app.py  config.py  cookies.b64  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
core/: jobs.py  telegram.py  utils.py  worker.py
routes/: clip.py
tests/: conftest.py  test_jobs.py  test_routes.py  test_utils.py
